--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
+    "react-quill-new": "^3.8.2",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0"
   },
