--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.11.2",
+    "@supabase/supabase-js": "^2.94.0",
     "html-to-image": "^1.11.13",
     "jspdf": "^4.0.0",
     "lucide-react": "^0.563.0",
